--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
-seaborn
-pymrmr
-matplotlib
 certifi==2018.1.18
 chardet==3.0.4
+cycler==0.10.0
+Cython==0.28.2
+decorator==4.3.0
+dt==0.2
+future==0.16.0
+-e git+git@github.com:hyperopt/hyperopt-sklearn.git@b880877e7dd7f24a739c7ae6f6db52f9730d68cb#egg=hpsklearn
+hyperopt==0.1
 idna==2.6
+kiwisolver==1.0.1
+matplotlib==2.2.2
+networkx==2.1
+nose==1.3.7
 numpy==1.14.2
 pandas==0.22.0
+pymongo==3.6.1
+pymrmr==0.1.8
+pyparsing==2.2.0
 python-dateutil==2.7.0
 pytz==2018.3
 requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.0.0
+seaborn==0.8.1
 six==1.11.0
+slackclient==1.2.1
 SQLAlchemy==1.2.5
 urllib3==1.22
-cython
+websocket-client==0.47.0
